# discord-role-bot

./: Cargo.toml  README.md
src/: common.rs  main.rs  questionnaire.rs  role.rs
